--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>practice03</module>
 		<module>practice04</module>
 		<module>practice05</module>
+		<module>chapter4</module>
 	</modules>
 	
 </project>
